--- a/src/HenaWebsite/Views/User/Login.cshtml
+++ b/src/HenaWebsite/Views/User/Login.cshtml
@@ -55,11 +55,11 @@
 </head>
 <body class="login-body">
 	<div class="container">
-		<form class="form-signin" action="index.html">
+		<form class="form-signin" action="@Url.Action("Login", "User")" method="post">
 			<h2 class="form-signin-heading">sign in now</h2>
 			<div class="login-wrap">
-				<input type="text" class="form-control" placeholder="User ID" autofocus>
-				<input type="password" class="form-control" placeholder="Password">
+				<input name="email" type="text" class="form-control" placeholder="E-Mail" autofocus>
+				<input name="password" type="password" class="form-control" placeholder="Password">
 				<label class="checkbox p-b-15">
 					@*<input type="checkbox" value="remember-me"> Remember me*@
 					<span class="pull-right">
@@ -74,27 +74,27 @@
 					</a>
 				</div>
 			</div>
-			<!-- Modal -->
-			<div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="modalForgotPassword" class="modal fade">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h4 class="modal-title">Forgot Password ?</h4>
-						</div>
-						<div class="modal-body">
-							<p>Enter your e-mail address below to reset your password.</p>
-							<input type="text" name="email" placeholder="Email" autocomplete="off" class="form-control placeholder-no-fix">
-						</div>
-						<div class="modal-footer">
-							<button data-dismiss="modal" class="btn btn-default" type="button">Cancel</button>
-							<button class="btn btn-success" type="button">Submit</button>
-						</div>
+		</form>
+		<!-- Modal -->
+		<div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="modalForgotPassword" class="modal fade">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 class="modal-title">Forgot Password ?</h4>
+					</div>
+					<div class="modal-body">
+						<p>Enter your e-mail address below to reset your password.</p>
+						<input type="text"  placeholder="Email" autocomplete="off" class="form-control placeholder-no-fix">
+					</div>
+					<div class="modal-footer">
+						<button data-dismiss="modal" class="btn btn-default" type="button">Cancel</button>
+						<button class="btn btn-success" type="button">Submit</button>
 					</div>
 				</div>
 			</div>
-			<!-- modal -->
-		</form>
+		</div>
+		<!-- modal -->
 	</div>
 
 	<!-- js placed at the end of the document so the pages load faster -->
