데이터 구조 정리 API 기본구조 설정

--- a/src/HenaWebsite/Views/Dashboard/Index.cshtml
+++ b/src/HenaWebsite/Views/Dashboard/Index.cshtml
@@ -9,3 +9,8 @@
 
 
 <h1>PAGE-DASHBOARD</h1>
+
+<h3>캠페인</h3>
+<button id='btn-campaign-create' class="btn btn-primary">New Campaign</button>
+<button id='btn-campaign-modify' class="btn btn-primary">Modify Campaign</button>
+<button id='btn-campaign-delete' class="btn btn-primary">Delete Campaign</button>
