--- a/src/HenaWebsite/Views/Shared/_LayoutDashboard.cshtml
+++ b/src/HenaWebsite/Views/Shared/_LayoutDashboard.cshtml
@@ -199,6 +199,7 @@
 	<script type="text/javascript" src="~/dashboard/assets/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
 	<script type="text/javascript" src="~/dashboard/assets/bootstrap-daterangepicker/date.js"></script>
 	<script type="text/javascript" src="~/dashboard/assets/bootstrap-daterangepicker/daterangepicker.js"></script>
+	<script type="text/javascript" src="~/dashboard/assets/bootstrap-daterangepicker/moment.min.js"></script>
 	<script type="text/javascript" src="~/dashboard/assets/bootstrap-colorpicker/js/bootstrap-colorpicker.js"></script>
 
 	<!--right slidebar-->
@@ -233,10 +234,10 @@
 			$('select.styled').customSelect();
 		});
 
-				//$(window).on("resize", function () {
-				//	var owl = $("#owl-demo").data("owlCarousel");
-				//	owl.reinit();
-				//});
+					//$(window).on("resize", function () {
+					//	var owl = $("#owl-demo").data("owlCarousel");
+					//	owl.reinit();
+					//});
 
 	</script>
 
