--- a/src/HenaWebsite/Views/User/Login.cshtml
+++ b/src/HenaWebsite/Views/User/Login.cshtml
@@ -85,7 +85,7 @@
 					</div>
 					<div class="modal-body">
 						<p>Enter your e-mail address below to reset your password.</p>
-						<input type="text"  placeholder="Email" autocomplete="off" class="form-control placeholder-no-fix">
+						<input type="text" placeholder="Email" autocomplete="off" class="form-control placeholder-no-fix">
 					</div>
 					<div class="modal-footer">
 						<button data-dismiss="modal" class="btn btn-default" type="button">Cancel</button>
@@ -97,9 +97,15 @@
 		<!-- modal -->
 	</div>
 
+
+
+
 	<!-- js placed at the end of the document so the pages load faster -->
 	<script src="~/dashboard/js/jquery.js"></script>
 	<script src="~/dashboard/js/bootstrap.min.js"></script>
+
+	<script src="~/hena/js/misc/utility.js"></script>
+	<script src="~/hena/js/pages/user/login.js"></script>
 
 </body>
 </html>
