테스트페이지 중간 커밋  - 캠페인 페이지 추가

--- a/src/HenaWebsite/Views/Shared/_LayoutDashboard.cshtml
+++ b/src/HenaWebsite/Views/Shared/_LayoutDashboard.cshtml
@@ -186,6 +186,8 @@
 
 	<!-- js placed at the end of the document so the pages load faster -->
 	<script src="~/dashboard/js/jquery.js"></script>
+	<script src="~/hena/js/misc/jquery.cookie.js"></script>
+
 	<script src="~/dashboard/js/bootstrap.min.js"></script>
 	<script class="include" type="text/javascript" src="~/dashboard/js/jquery.dcjqaccordion.2.7.js"></script>
 	<script src="~/dashboard/js/jquery.scrollTo.min.js"></script>
@@ -213,6 +215,10 @@
 	<script src="~/dashboard/js/easy-pie-chart.js"></script>
 	<script src="~/dashboard/js/count.js"></script>
 
+
+	<script src="~/hena/js/misc/utility.js"></script>
+	<script src="~/hena/js/api/hena-aic-api.js"></script>
+
 	<script>
 
 		//owl carousel
@@ -234,10 +240,10 @@
 			$('select.styled').customSelect();
 		});
 
-					//$(window).on("resize", function () {
-					//	var owl = $("#owl-demo").data("owlCarousel");
-					//	owl.reinit();
-					//});
+									//$(window).on("resize", function () {
+									//	var owl = $("#owl-demo").data("owlCarousel");
+									//	owl.reinit();
+									//});
 
 	</script>
 
