--- a/src/HenaWebsite/Views/Dashboard/Index.cshtml
+++ b/src/HenaWebsite/Views/Dashboard/Index.cshtml
@@ -49,7 +49,7 @@
 							<div class="form-group col-sm-6">
 								<label class="col-sm-2 control-label">Campaign Type</label>
 								<div class="col-sm-10">
-									<select class="form-control input-sm " name="campaignType">
+									<select class="form-control" name="campaignType">
 										@{
 											List<string> campaignTypes = new List<string>(Enum.GetNames(typeof(CampaignTypes)));
 											campaignTypes.Remove(CampaignTypes.None.ToString());
@@ -91,7 +91,7 @@
 							</div>
 
 							<div class="form-group col-sm-12">
-								<button id='btn-campaign-create' class="btn btn-primary" type="button">New</button>
+								<button id='btn-campaign-create' class="btn btn-primary" type="button">Create</button>
 								<button id='btn-campaign-modify' class="btn btn-primary" type="button">Modify</button>
 								<button id='btn-campaign-delete' class="btn btn-primary" type="button">Delete</button>
 
@@ -154,28 +154,94 @@
 			<h3>Ad Designs</h3>
 		</header>
 		<div class="panel-body">
-			<section class="panel">
-				<div class="panel-body">
-					<table class="table table-striped table-advance table-hover" id="table-ad-designs">
-						<thead>
-							<tr>
-								<th></th>
-								<th>AdDesignId</th>
-								<th>Name</th>
-								<th>AdDesignType</th>
-								<th>ResourceName</th>
-								<th>DestinationUrl</th>
-								<th>IsPause</th>
-								<th>EndTime</th>
-								<th>IsPause</th>
-								<th>CreateTime</th>
-							</tr>
-						</thead>
-						<tbody>
-						</tbody>
-					</table>
-				</div>
-			</section>
+			<div class="col-lg-12">
+				<section class="panel">
+					<div class="panel-body">
+						<table class="table table-striped table-advance table-hover" id="table-ad-designs">
+							<thead>
+								<tr>
+									<th></th>
+									<th>AdDesignId</th>
+									<th>Name</th>
+									<th>AdDesignType</th>
+									<th>ResourceName</th>
+									<th>DestinationUrl</th>
+									<th>IsPause</th>
+									<th>CreateTime</th>
+								</tr>
+							</thead>
+							<tbody></tbody>
+						</table>
+					</div>
+				</section>
+				<section class="panel p-t-20 p-b-20">
+					<div class="panel-body">
+						<form class="form-horizontal tasi-form" id="form-ad-design" action="#">
+
+							<div class="form-group col-sm-6">
+								<label class="col-sm-2 control-label">Campaign Id</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" name="campaignId" placeholder="" readonly>
+								</div>
+							</div>
+
+							<div class="form-group col-sm-6">
+								<label class="col-sm-2 control-label">Ad Design Id</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" name="adDesignId" placeholder="" readonly>
+								</div>
+							</div>
+
+							<div class="form-group col-sm-6">
+								<label class="col-sm-2 control-label">Ad Design Name</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" name="name" placeholder="">
+								</div>
+							</div>
+
+							<div class="form-group col-sm-6">
+								<label class="col-sm-2 control-label">Ad Design Type</label>
+								<div class="col-sm-10">
+									<select class="form-control" name="adDesignType">
+										@{
+											List<string> adDesignTypes = new List<string>(Enum.GetNames(typeof(AdDesignTypes)));
+											adDesignTypes.Remove(AdDesignTypes.None.ToString());
+											foreach (var it in adDesignTypes)
+											{
+												<option>@it</option>
+											}
+										}
+									</select>
+								</div>
+							</div>
+
+							<div class="form-group col-sm-6">
+								<label class="col-sm-2 control-label">Resource Name</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" name="resourceName" placeholder="">
+								</div>
+							</div>
+
+							<div class="form-group col-sm-6">
+								<label class="col-sm-2 control-label">Destination Url</label>
+								<div class="col-sm-10">
+									<input type="text" class="form-control" name="destinationUrl" placeholder="">
+								</div>
+							</div>
+
+							<div class="form-group col-sm-12">
+								<button id='btn-ad-design-create' class="btn btn-primary" type="button">Create</button>
+								<button id='btn-ad-design-modify' class="btn btn-primary" type="button">Modify</button>
+								<button id='btn-ad-design-delete' class="btn btn-primary" type="button">Delete</button>
+
+								<button id='btn-ad-design-form-reset' class="btn btn-primary" type="button">Form Reset</button>
+							</div>
+
+						</form>
+					</div>
+				</section>
+			</div>
+			
 		</div>
 	</section>
 </div>
