테스트페이지 기본 등록기능 적용  - Campaign  - Ad Design  - App  - Ad Unit

--- a/src/HenaWebsite/Views/Shared/_LayoutDashboard.cshtml
+++ b/src/HenaWebsite/Views/Shared/_LayoutDashboard.cshtml
@@ -160,6 +160,8 @@
 					@DrawSubMenuItem("page-apps-list", "App List", Url.Action("List", "Apps"))
 					@EndSubMenu()
 					@DrawMenuItem("page-campaigns", "Campaigns", "fa fa-bullhorn", Url.Action("Index", "Campaigns"))
+
+					@DrawMenuItem("page-test", "Test", "fa fa-dashboard", Url.Action("Test", "Dashboard"))
 				</ul>
 				<!-- sidebar menu end-->
 			</div>
