- 디자인 업로드시 사이즈 검증코드 추가 - enum 타입 재정의 - API 사용시 세션 검증로직 추가 - FTP 업로드 실패현상 수정( 업로드시 ftp 사용 후 정리작업이 안되어 있었음. ) - 에러메시지 추가 - 샘플 이미지 추가

--- a/src/HenaWebsite/Views/Dashboard/_TestAppsPartial.cshtml
+++ b/src/HenaWebsite/Views/Dashboard/_TestAppsPartial.cshtml
@@ -4,7 +4,7 @@
 
 <!--apps begin-->
 <div class="row">
-	<section class="panel">
+	<section class="panel" id="section-apps">
 		<header class="panel-heading">
 			<h3>Apps</h3>
 		</header>
@@ -44,7 +44,7 @@
 									</select>
 								</div>
 							</div>
-
+							<div class="alert alert-danger" hidden />
 							<div class="form-group col-sm-12">
 								<button id='btn-app-create' class="btn btn-primary" type="button">Create</button>
 								<button id='btn-app-modify' class="btn btn-primary" type="button">Modify</button>
@@ -86,7 +86,7 @@
 <!--apps end-->
 <!--ad-unit begin-->
 <div class="row">
-	<section class="panel">
+	<section class="panel" id="section-ad-units">
 		<header class="panel-heading">
 			<h3>Ad Units</h3>
 		</header>
@@ -135,13 +135,13 @@
 							</div>
 
 							<div class="form-group col-sm-6">
-								<label class="col-sm-2 control-label">Ad Design Type</label>
+								<label class="col-sm-2 control-label">Ad System Type</label>
 								<div class="col-sm-10">
-									<select class="form-control" name="adDesignType">
+									<select class="form-control" name="adSystemType">
 										@{
-											List<string> adDesignType = new List<string>(Enum.GetNames(typeof(AdDesignTypes)));
-											adDesignType.Remove(AdDesignTypes.None.ToString());
-											foreach (var it in adDesignType)
+											List<string> adSystemTypes = new List<string>(Enum.GetNames(typeof(AdSystemTypes)));
+											adSystemTypes.Remove(AdSystemTypes.None.ToString());
+											foreach (var it in adSystemTypes)
 											{
 												<option>@it</option>
 											}
@@ -149,7 +149,7 @@
 									</select>
 								</div>
 							</div>
-
+							<div class="alert alert-danger" hidden />
 							<div class="form-group col-sm-12">
 								<button id='btn-ad-unit-create' class="btn btn-primary" type="button">Create</button>
 								<button id='btn-ad-unit-modify' class="btn btn-primary" type="button">Modify</button>
