샘플 이미지 생성 툴 추가 샘플 이미지 추가

--- a/src/HenaWebsite/Views/Dashboard/Test.cshtml
+++ b/src/HenaWebsite/Views/Dashboard/Test.cshtml
@@ -26,10 +26,10 @@
 	<div class="panel-body">
 		<div class="tab-content">
 			<div id="tab-campaigns" class="tab-pane active">
-				@Html.Partial("_TestCampaignsPartial")
+				@Html.PartialAsync("_TestCampaignsPartial")
 			</div>
 			<div id="tab-apps" class="tab-pane">
-				@Html.Partial("_TestAppsPartial")
+				@Html.PartialAsync("_TestAppsPartial")
 			</div>
 		</div>
 	</div>
