Html.Partial async로 변경 Preview 링크 적용

--- a/src/HenaWebsite/Views/Dashboard/Test.cshtml
+++ b/src/HenaWebsite/Views/Dashboard/Test.cshtml
@@ -26,10 +26,10 @@
 	<div class="panel-body">
 		<div class="tab-content">
 			<div id="tab-campaigns" class="tab-pane active">
-				@Html.PartialAsync("_TestCampaignsPartial")
+				@await Html.PartialAsync("_TestCampaignsPartial")
 			</div>
 			<div id="tab-apps" class="tab-pane">
-				@Html.PartialAsync("_TestAppsPartial")
+				@await Html.PartialAsync("_TestAppsPartial")
 			</div>
 		</div>
 	</div>
