--- a/src/HenaWebsite/Views/Dashboard/_TestCampaignsPartial.cshtml
+++ b/src/HenaWebsite/Views/Dashboard/_TestCampaignsPartial.cshtml
@@ -210,7 +210,7 @@
 							</div>
 
 
-							<div class="form-group col-sm-6">
+							<div class="form-group col-sm-12">
 								<div class="col-sm-2">
 									<span class="btn btn-success fileinput-button">
 										<i class="glyphicon glyphicon-plus"></i>
@@ -220,7 +220,9 @@
 								</div>
 
 								<div class="col-sm-10">
-									<img src="" id="ad-resource-preview" />
+									<a href="" target="_blank" name="preview" id="ad-resource-preview-link">
+										<img src="" id="ad-resource-preview" style="max-width:300px;max-height:300px;" />
+									</a>
 								</div>
 							</div>
 							<div class="form-group col-sm-12">
