광고 요청,노출,클릭 기초작업.

--- a/src/HenaWebsite/Views/Dashboard/_TestAppsPartial.cshtml
+++ b/src/HenaWebsite/Views/Dashboard/_TestAppsPartial.cshtml
@@ -44,7 +44,10 @@
 									</select>
 								</div>
 							</div>
-							<div class="alert alert-danger" hidden />
+							<div class="form-group col-sm-12">
+								<div class="alert alert-danger" hidden>
+								</div>
+							</div>
 							<div class="form-group col-sm-12">
 								<button id='btn-app-create' class="btn btn-primary" type="button">Create</button>
 								<button id='btn-app-modify' class="btn btn-primary" type="button">Modify</button>
@@ -100,7 +103,7 @@
 									<th></th>
 									<th>AdUnitId</th>
 									<th>Name</th>
-									<th>AdDesignType</th>
+									<th>AdSystemType</th>
 									<th>CreateTime</th>
 									<th>LastUpdate</th>
 								</tr>
@@ -149,7 +152,10 @@
 									</select>
 								</div>
 							</div>
-							<div class="alert alert-danger" hidden />
+							<div class="form-group col-sm-12">
+								<div class="alert alert-danger" hidden>
+								</div>
+							</div>
 							<div class="form-group col-sm-12">
 								<button id='btn-ad-unit-create' class="btn btn-primary" type="button">Create</button>
 								<button id='btn-ad-unit-modify' class="btn btn-primary" type="button">Modify</button>
