--- a/src/HenaWebsite/Views/Dashboard/Index.cshtml
+++ b/src/HenaWebsite/Views/Dashboard/Index.cshtml
@@ -10,4 +10,11 @@
 }
 <h1>DASHBOARD</h1>
 
-<img src="@Url.Action("ReqAd", "PageAd")" />
+<div class="container">
+	<div >
+		<a href="#" id="ad-link" target="_blank">
+			<img id="img-ad" width="300" height="250" />
+		</a>
+	</div>
+	<div id="btn-refresh" class="btn btn-primary" >Refresh</div>	
+</div>
