--- a/src/HenaWebsite/Views/Apps/Index.cshtml
+++ b/src/HenaWebsite/Views/Apps/Index.cshtml
@@ -1,8 +1,190 @@
-﻿@{
+﻿@using Hena;
+@using Hena.Shared.Data;
+@using Hena.Security.Claims;
+
+@{
 	Layout = "_LayoutDashboard";
 	ViewData["page-scripts"] = new string[] { "hena/js/pages/apps/index.js" };
 	ViewData["page-id"] = "page-apps";
+
+	//DBKey UserId = Context.User.FindFirst(HenaClaimTypes.UserId).Value;
+
 }
 
+<!--tab nav start-->
+<section class="panel">
+	<div class="panel-body">
+		<!--apps begin-->
+		<div class="row">
+			<section class="panel" id="section-apps">
+				<header class="panel-heading">
+					<h3>Apps</h3>
+				</header>
+				<div class="panel-body">
 
-<h1>PAGE-DASHBOARD-APPS</h1>
+					<div class="col-lg-12">
+						<section class="panel p-t-20 p-b-20">
+							<div class="panel-body">
+								<form class="form-horizontal tasi-form" id="form-app" action="#">
+
+									<div class="form-group col-sm-6">
+										<label class="col-sm-2 control-label">App Id</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="appId" placeholder="" readonly>
+										</div>
+									</div>
+
+									<div class="form-group col-sm-6">
+										<label class="col-sm-2 control-label">App Name</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="name" placeholder="">
+										</div>
+									</div>
+
+									<div class="form-group col-sm-6">
+										<label class="col-sm-2 control-label">Market Type</label>
+										<div class="col-sm-10">
+											<select class="form-control" name="marketType">
+												@{
+													List<string> marketTypes = new List<string>(Enum.GetNames(typeof(MarketTypes)));
+													marketTypes.Remove(MarketTypes.None.ToString());
+													foreach (var it in marketTypes)
+													{
+														<option>@it</option>
+													}
+												}
+											</select>
+										</div>
+									</div>
+									<div class="form-group col-sm-12">
+										<div class="alert alert-danger" hidden>
+										</div>
+									</div>
+									<div class="form-group col-sm-12">
+										<button id='btn-app-create' class="btn btn-primary" type="button">Create</button>
+										<button id='btn-app-modify' class="btn btn-primary" type="button">Modify</button>
+										<button id='btn-app-delete' class="btn btn-primary" type="button">Delete</button>
+
+										<button id='btn-app-form-reset' class="btn btn-primary" type="button">Form Reset</button>
+									</div>
+
+								</form>
+							</div>
+						</section>
+					</div>
+
+
+					<section class="panel">
+						<div class="panel-body">
+							<table class="table table-striped table-advance table-hover" id="table-apps">
+								<thead>
+									<tr>
+										<th></th>
+										<th>AppId</th>
+										<th>AppName</th>
+										<th>MarketType</th>
+										<th>CreateTime</th>
+										<th>LastUpdate</th>
+									</tr>
+								</thead>
+								<tbody></tbody>
+							</table>
+						</div>
+					</section>
+
+
+
+				</div>
+			</section>
+		</div>
+		<!--apps end-->
+		<!--ad-unit begin-->
+		<div class="row">
+			<section class="panel" id="section-ad-units">
+				<header class="panel-heading">
+					<h3>Ad Units</h3>
+				</header>
+				<div class="panel-body">
+					<div class="col-lg-12">
+						<section class="panel">
+							<div class="panel-body">
+								<table class="table table-striped table-advance table-hover" id="table-ad-units">
+									<thead>
+										<tr>
+											<th></th>
+											<th>AdUnitId</th>
+											<th>Name</th>
+											<th>AdSystemType</th>
+											<th>CreateTime</th>
+											<th>LastUpdate</th>
+										</tr>
+									</thead>
+									<tbody></tbody>
+								</table>
+							</div>
+						</section>
+						<section class="panel p-t-20 p-b-20">
+							<div class="panel-body">
+								<form class="form-horizontal tasi-form" id="form-ad-unit" action="#">
+
+									<div class="form-group col-sm-6">
+										<label class="col-sm-2 control-label">App Id</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="appId" placeholder="" readonly>
+										</div>
+									</div>
+
+									<div class="form-group col-sm-6">
+										<label class="col-sm-2 control-label">Ad Unit Id</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="adUnitId" placeholder="" readonly>
+										</div>
+									</div>
+
+									<div class="form-group col-sm-6">
+										<label class="col-sm-2 control-label">Ad Unit Name</label>
+										<div class="col-sm-10">
+											<input type="text" class="form-control" name="name" placeholder="">
+										</div>
+									</div>
+
+									<div class="form-group col-sm-6">
+										<label class="col-sm-2 control-label">Ad System Type</label>
+										<div class="col-sm-10">
+											<select class="form-control" name="adSystemType">
+												@{
+													List<string> adSystemTypes = new List<string>(Enum.GetNames(typeof(AdSystemTypes)));
+													adSystemTypes.Remove(AdSystemTypes.None.ToString());
+													foreach (var it in adSystemTypes)
+													{
+														<option>@it</option>
+													}
+												}
+											</select>
+										</div>
+									</div>
+									<div class="form-group col-sm-12">
+										<div class="alert alert-danger" hidden>
+										</div>
+									</div>
+									<div class="form-group col-sm-12">
+										<button id='btn-ad-unit-create' class="btn btn-primary" type="button">Create</button>
+										<button id='btn-ad-unit-modify' class="btn btn-primary" type="button">Modify</button>
+										<button id='btn-ad-unit-delete' class="btn btn-primary" type="button">Delete</button>
+
+										<button id='btn-ad-unit-form-reset' class="btn btn-primary" type="button">Form Reset</button>
+									</div>
+
+								</form>
+							</div>
+						</section>
+					</div>
+
+				</div>
+			</section>
+		</div>
+		<!--ad-unit end-->
+
+	</div>
+</section>
+<!--tab nav start-->
