--- a/src/HenaWebsite/Views/Shared/_LayoutDashboard.cshtml
+++ b/src/HenaWebsite/Views/Shared/_LayoutDashboard.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Hena;
+@using Hena.Shared.Data;
 @using Hena.Security.Claims;
 @using Microsoft.AspNetCore.Html;
 @using System;
@@ -11,6 +12,10 @@
 	string[] pageScripts = WebServiceUtility.ToStringArrayForce(ViewData["page-scripts"]);
 
 	string pageId = WebServiceUtility.ToStringForce(ViewData["page-id"]);
+
+	DBKey userId = User.FindFirst(HenaClaimTypes.UserId).Value;
+	var balances = new BalanceDataContainer();
+	await balances.FromDBByUserIdAsync(userId);
 
 	Func<string, string, string, string, IHtmlContent> DrawMenuItem = (string menuId, string title, string iconClasses, string url) =>
 	{
@@ -54,7 +59,7 @@
 
 	Func<string, string, string, IHtmlContent> DrawSubMenuItem = (string menuId, string title, string url) =>
 	{
-		if(menuId == pageId)
+		if (menuId == pageId)
 		{
 			return Html.Raw($"<li id='{menuId}'><a class='active' href='{url}'>{title}</a></li>");
 		}
@@ -143,9 +148,18 @@
 							<b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu extended logout">
-							<li><a href="#"><i class=" fa fa-suitcase"></i>Profile</a></li>
-							<li><a href="#"><i class="fa fa-cog"></i> Settings</a></li>
-							<li><a href="#"><i class="fa fa-bell-o"></i> Notification</a></li>
+							<li>
+								<h6>HENA</h6>
+								<span>@balances.FindOrAdd(userId, CurrencyTypes.HENA).Amount.ToString("N2")</span>
+							</li>
+							<li>
+								<h6>MINING</h6>
+								<span>@balances.FindOrAdd(userId, CurrencyTypes.HENA_MINING).Amount.ToString("N5")</span>
+							</li>
+							<li>
+								<h6>AIC</h6>
+								<span>@balances.FindOrAdd(userId, CurrencyTypes.HENA_AIC).Amount.ToString("N2")</span>
+							</li>
 							<li><a href="@Url.Action("Logout", "User")"><i class="fa fa-key"></i> Log Out</a></li>
 						</ul>
 					</li>
@@ -161,12 +175,13 @@
 				<!-- sidebar menu start-->
 				<ul class="sidebar-menu" id="nav-accordion">
 					@DrawMenuItem("page-dashboard", "Dashboard", "fa fa-dashboard", Url.Action("Index", "Dashboard"))
-					@BeginSubMenu("page-apps", "Apps", "fa fa-laptop", "javascript:;")
-					@DrawSubMenuItem("page-apps-list", "App List", Url.Action("List", "Apps"))
-					@EndSubMenu()
+					@DrawMenuItem("page-apps", "Apps", "fa fa-laptop", Url.Action("Index", "Apps"))
+					@*@BeginSubMenu("page-apps", "Apps", "fa fa-laptop", "javascript:;")
+		@DrawSubMenuItem("page-apps-list", "App List", Url.Action("List", "Apps"))
+		@EndSubMenu()*@
 					@DrawMenuItem("page-campaigns", "Campaigns", "fa fa-bullhorn", Url.Action("Index", "Campaigns"))
 
-					@DrawMenuItem("page-test", "Test", "fa fa-dashboard", Url.Action("Test", "Dashboard"))
+					@*@DrawMenuItem("page-test", "Test", "fa fa-dashboard", Url.Action("Test", "Dashboard"))*@
 				</ul>
 				<!-- sidebar menu end-->
 			</div>
@@ -211,7 +226,7 @@
 	<script type="text/javascript" src="~/dashboard/assets/bootstrap-daterangepicker/moment.min.js"></script>
 	<script type="text/javascript" src="~/dashboard/assets/bootstrap-colorpicker/js/bootstrap-colorpicker.js"></script>
 
-	
+
 
 	<!--right slidebar-->
 	<script src="~/dashboard/js/slidebars.min.js"></script>
@@ -249,10 +264,10 @@
 			$('select.styled').customSelect();
 		});
 
-												//$(window).on("resize", function () {
-												//	var owl = $("#owl-demo").data("owlCarousel");
-												//	owl.reinit();
-												//});
+													//$(window).on("resize", function () {
+													//	var owl = $("#owl-demo").data("owlCarousel");
+													//	owl.reinit();
+													//});
 
 	</script>
 
