--- a/src/HenaWebsite/Views/User/Login.cshtml
+++ b/src/HenaWebsite/Views/User/Login.cshtml
@@ -76,7 +76,7 @@
 			</div>
 		</form>
 		<!-- Modal -->
-		<div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="modalForgotPassword" class="modal fade">
+		<div aria-hidden="false" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="modalForgotPassword" class="modal fade">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -85,11 +85,15 @@
 					</div>
 					<div class="modal-body">
 						<p>Enter your e-mail address below to reset your password.</p>
-						<input type="text" placeholder="Email" autocomplete="off" class="form-control placeholder-no-fix">
+						<input type="text" name="email" placeholder="Email" autocomplete="off" class="form-control placeholder-no-fix">
+						<p></p>
+						<div class="alert alert-danger" hidden>
+							
+						</div>
 					</div>
 					<div class="modal-footer">
-						<button data-dismiss="modal" class="btn btn-default" type="button">Cancel</button>
-						<button class="btn btn-success" type="button">Submit</button>
+						<button data-dismiss="modal" class="btn btn-default" type="button" name="btnCancel">Cancel</button>
+						<button class="btn btn-success" type="button" name="btnSubmit" id="btnForgotPasswordSubmit">Submit</button>
 					</div>
 				</div>
 			</div>
@@ -105,6 +109,7 @@
 	<script src="~/dashboard/js/bootstrap.min.js"></script>
 
 	<script src="~/hena/js/misc/utility.js"></script>
+	<script src="~/hena/js/api/hena-aic-api.js"></script>
 	<script src="~/hena/js/pages/user/login.js"></script>
 
 </body>
