--- a/src/HenaWebsite/Views/AIC/_PublisherReportPartial.cshtml
+++ b/src/HenaWebsite/Views/AIC/_PublisherReportPartial.cshtml
@@ -3,13 +3,19 @@
 @using Hena.Security.Claims;
 
 @{
-
+	int displayDay = 100;
 	DBKey userId = User.FindFirst(HenaClaimTypes.UserId).Value;
 	RevenueReportDataContainer reportDataContainer = new RevenueReportDataContainer();
 	DateTime nowTime = DateTime.UtcNow.AddHours(9);
 	DateTime endTimeLocal = nowTime.Date.AddDays(1);
-	DateTime beginTimeLocal = endTimeLocal.Date.AddDays(-101);
-	await reportDataContainer.FromDBByAdvertiserIdAsync(userId, beginTimeLocal, endTimeLocal, TimeSpan.FromHours(9));
+	DateTime beginTimeLocal = endTimeLocal.Date.AddDays(-displayDay - 1);
+	await reportDataContainer.FromDBByPublisherIdAsync(userId, beginTimeLocal, endTimeLocal, TimeSpan.FromHours(9));
+
+	DateTime date = nowTime.Date;
+	for (int i = 0; i < displayDay; ++i, date = date.AddDays(-1))
+	{
+		reportDataContainer.FindOrAdd(userId, date);
+	}
 	reportDataContainer.Items.Sort((x, y) => { return x.ReportDate.CompareToDesc(y.ReportDate); });
 }
 
@@ -27,7 +33,7 @@
 						<thead>
 							<tr>
 								<th class="text-center" width="25%">Date</th>
-								<th class="text-center" width="25%">Cost</th>
+								<th class="text-center" width="25%">Revenue</th>
 								<th class="text-center" width="25%">Display</th>
 								<th class="text-center" width="25%">Click</th>
 							</tr>
@@ -38,7 +44,7 @@
 								{
 									<tr>
 										<td class="text-center">@it.ReportDate.ToStringDate()</td>
-										<td class="text-right">@((-it.Revenue).ToString("N4")) HENA</td>
+										<td class="text-right">@it.Revenue.ToString("N4") HENA</td>
 										<td class="text-center">@it.DisplayCount</td>
 										<td class="text-center">@it.ClickCount</td>
 									</tr>
