--- a/src/HenaWebsite/Views/Campaigns/Index.cshtml
+++ b/src/HenaWebsite/Views/Campaigns/Index.cshtml
@@ -29,22 +29,22 @@
 								<form class="form-horizontal tasi-form" id="form-campaign" action="#" enctype="multipart/form-data">
 
 									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">Campaign Id</label>
-										<div class="col-sm-10">
+										<label class="col-sm-4 control-label">Campaign Id</label>
+										<div class="col-sm-8">
 											<input type="text" class="form-control" name="campaignId" placeholder="" readonly>
 										</div>
 									</div>
 
 									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">Campaign Name</label>
-										<div class="col-sm-10">
+										<label class="col-sm-4 control-label">Campaign Name</label>
+										<div class="col-sm-8">
 											<input type="text" class="form-control" name="name" placeholder="">
 										</div>
 									</div>
 
 									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">Campaign Type</label>
-										<div class="col-sm-10">
+										<label class="col-sm-4 control-label">Campaign Type</label>
+										<div class="col-sm-8">
 											<select class="form-control" name="campaignType">
 												@{
 													List<string> campaignTypes = new List<string>(Enum.GetNames(typeof(CampaignTypes)));
@@ -59,29 +59,29 @@
 									</div>
 
 									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">Cost</label>
-										<div class="col-sm-10">
+										<label class="col-sm-4 control-label">Cost</label>
+										<div class="col-sm-8">
 											<input type="number" class="form-control" name="cost" placeholder="">
 										</div>
 									</div>
 
-									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">Target Value</label>
-										<div class="col-sm-10">
-											<input type="number" class="form-control" name="targetValue" placeholder="">
+									<div class="form-group col-sm-6" hidden>
+										<label class="col-sm-4 control-label">Target Value</label>
+										<div class="col-sm-8">
+											<input type="number" class="form-control" name="targetValue" placeholder="" value="100000">
 										</div>
 									</div>
 
 									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">Begin Time</label>
-										<div class="col-sm-10">
+										<label class="col-sm-4 control-label">Begin Time</label>
+										<div class="col-sm-8">
 											<input type="date" class="form-control" name="beginTime" placeholder="">
 										</div>
 									</div>
 
 									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">End Time</label>
-										<div class="col-sm-10">
+										<label class="col-sm-4 control-label">End Time</label>
+										<div class="col-sm-8">
 											<input type="date" class="form-control" name="endTime" placeholder="">
 										</div>
 									</div>
@@ -179,45 +179,43 @@
 								<form class="form-horizontal tasi-form" id="form-ad-design" action="#">
 
 									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">Campaign Id</label>
-										<div class="col-sm-10">
+										<label class="col-sm-4 control-label">Campaign Id</label>
+										<div class="col-sm-8">
 											<input type="text" class="form-control" name="campaignId" placeholder="" readonly>
 										</div>
 									</div>
 
 									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">Ad Design Id</label>
-										<div class="col-sm-10">
+										<label class="col-sm-4 control-label">Ad Design Id</label>
+										<div class="col-sm-8">
 											<input type="text" class="form-control" name="adDesignId" placeholder="" readonly>
 										</div>
 									</div>
 
 									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">Ad Resource Id</label>
-										<div class="col-sm-10">
+										<label class="col-sm-4 control-label">Ad Resource Id</label>
+										<div class="col-sm-8">
 											<input type="text" class="form-control" name="adResourceId" placeholder="" readonly>
 										</div>
 									</div>
 
 									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">Ad Design Type</label>
-										<div class="col-sm-10">
-											<div class="col-sm-10">
-												<input type="text" class="form-control" name="adDesignType" placeholder="" readonly>
-											</div>
+										<label class="col-sm-4 control-label">Ad Design Type</label>
+										<div class="col-sm-8">
+											<input type="text" class="form-control" name="adDesignType" placeholder="" readonly>
 										</div>
 									</div>
 
 									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">Ad Design Name</label>
-										<div class="col-sm-10">
+										<label class="col-sm-4 control-label">Ad Design Name</label>
+										<div class="col-sm-8">
 											<input type="text" class="form-control" name="name" placeholder="">
 										</div>
 									</div>
 
 									<div class="form-group col-sm-6">
-										<label class="col-sm-2 control-label">Destination Url</label>
-										<div class="col-sm-10">
+										<label class="col-sm-4 control-label">Destination Url</label>
+										<div class="col-sm-8">
 											<input type="text" class="form-control" name="destinationUrl" placeholder="">
 										</div>
 									</div>
