--- a/src/HenaWebsite/Views/Dashboard/Index.cshtml
+++ b/src/HenaWebsite/Views/Dashboard/Index.cshtml
@@ -42,14 +42,41 @@
 			<div class="form-group">
 				<label class="col-sm-2 control-label">Balance</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" placeholder="" value="@( (balanceHena.Amount + balanceHenaAIC.Amount + balanceHenaMining.Amount).ToString("N4") ) HENA" readonly>
+					<div class="form-group">
+						<label class="col-sm-2 control-label">TOTAL</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" placeholder="" value="@( (balanceHena.Amount + balanceHenaAIC.Amount + balanceHenaMining.Amount).ToString("N4") ) HENA" readonly>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-2 control-label">HENA</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" placeholder="" value="@( (balanceHena.Amount).ToString("N4") ) HENA" readonly>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-2 control-label">AIC</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" placeholder="" value="@( (balanceHenaAIC.Amount).ToString("N4") ) HENA" readonly>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-sm-2 control-label">MINING</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" placeholder="" value="@( (balanceHenaMining.Amount).ToString("N4") ) HENA" readonly>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</form>
 	</div>
 </section>
-
-<section class="panel">
+<!-- AIC Report start -->
+<section class="panel col-lg-6">
 	<header class="panel-heading">
 		<h4 class="">AIC Report</h4>
 	</header>
@@ -85,39 +112,33 @@
 			</div>
 		</section>
 	</div>
+</section>
+<!-- AIC Report end -->
+<!-- Mining Report start -->
+<section class="panel col-lg-6">
+	<header class="panel-heading">
+		<h4 class="">Mining Report</h4>
+	</header>
+
+	<div class="panel-body">
+		<!--tab nav start-->
+		<section class="panel">
+			<header class="panel-heading tab-bg-dark-navy-blue ">
+				<ul class="nav nav-tabs">
+					<li class="active">
+						<a data-toggle="tab" href="#tab-advertiser-history">Mining Report</a>
+					</li>
+				</ul>
+			</header>
+			<div class="panel-body">
+				<div class="tab-content">
+					<div id="tab-advertiser-history" class="tab-pane active">
+						@await Html.PartialAsync("_MiningReportPartial")
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
 
 </section>
-
-<!--tab nav start-->
-@*<section class="panel">
-		<header class="panel-heading tab-bg-dark-navy-blue ">
-			<span class="text-warning">Advertiser</span>
-		</header>
-		<div class="panel-body">
-			@await Html.PartialAsync("_AdvertiserHistoryPartial")
-		</div>
-	</section>
-	<section class="panel">
-		<header class="panel-heading tab-bg-dark-navy-blue ">
-			<span class="text-warning">Publisher</span>
-		</header>
-		<div class="panel-body">
-			@await Html.PartialAsync("_PublisherHistoryPartial")
-		</div>
-	</section>
-	<section class="panel">
-		<header class="panel-heading tab-bg-dark-navy-blue ">
-			<span class="text-warning">Customer</span>
-		</header>
-		<div class="panel-body">
-			@await Html.PartialAsync("_CustomerHistoryPartial")
-		</div>
-	</section>*@
-@*<div class="container">
-		<div>
-			<a href="#" id="ad-link" target="_blank">
-				<img id="img-ad" width="300" height="250" />
-			</a>
-		</div>
-		<div id="btn-refresh" class="btn btn-primary">Refresh</div>
-	</div>*@
+<!-- Mining Report end -->
