--- a/src/HenaWebsite/Views/Mining/_MiningReportPartial.cshtml
+++ b/src/HenaWebsite/Views/Mining/_MiningReportPartial.cshtml
@@ -3,13 +3,19 @@
 @using Hena.Security.Claims;
 
 @{
-
+	int displayDay = 100;
 	DBKey userId = User.FindFirst(HenaClaimTypes.UserId).Value;
-	RevenueReportDataContainer reportDataContainer = new RevenueReportDataContainer();
+	MiningReportDataContainer reportDataContainer = new MiningReportDataContainer();
 	DateTime nowTime = DateTime.UtcNow.AddHours(9);
 	DateTime endTimeLocal = nowTime.Date.AddDays(1);
-	DateTime beginTimeLocal = endTimeLocal.Date.AddDays(-101);
-	await reportDataContainer.FromDBByPublisherIdAsync(userId, beginTimeLocal, endTimeLocal, TimeSpan.FromHours(9));
+	DateTime beginTimeLocal = endTimeLocal.Date.AddDays(-displayDay - 1);
+	await reportDataContainer.FromDBByUserIdAsync(userId, beginTimeLocal, endTimeLocal, TimeSpan.FromHours(9));
+
+	DateTime date = nowTime.Date;
+	for (int i = 0; i < displayDay; ++i, date = date.AddDays(-1))
+	{
+		reportDataContainer.FindOrAdd(userId, date);
+	}
 	reportDataContainer.Items.Sort((x, y) => { return x.ReportDate.CompareToDesc(y.ReportDate); });
 }
 
@@ -22,14 +28,12 @@
 		<div class="panel-body">
 
 			<section class="panel">
-				<div class="panel-body">
+				<div class="panel-body col-lg-12">
 					<table class="table table-striped table-advance table-hover" id="table-apps">
 						<thead>
 							<tr>
-								<th class="text-center" width="25%">Date</th>
-								<th class="text-center" width="25%">Revenue</th>
-								<th class="text-center" width="25%">Display</th>
-								<th class="text-center" width="25%">Click</th>
+								<th class="text-center" width="50%">Date</th>
+								<th class="text-center" width="50%">Mining Amount</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -38,9 +42,7 @@
 								{
 									<tr>
 										<td class="text-center">@it.ReportDate.ToStringDate()</td>
-										<td class="text-right">@it.Revenue.ToString("N4") HENA</td>
-										<td class="text-center">@it.DisplayCount</td>
-										<td class="text-center">@it.ClickCount</td>
+										<td class="text-right">@it.MiningAmount.ToString("N4") HENA</td>
 									</tr>
 								}
 							}
