--- a/src/HenaWebsite/Views/User/ChangePassword.cshtml
+++ b/src/HenaWebsite/Views/User/ChangePassword.cshtml
@@ -11,7 +11,7 @@
 <section class="panel">
 
 	<header class="panel-heading">
-		<h4 class="">Profile</h4>
+		<h4 class="">Change Password</h4>
 	</header>
 	<div class="panel-body">
 		<form action="@Url.Action("ChangePassword", "User")" method="post" class="form-horizontal tasi-form">
@@ -38,7 +38,7 @@
 
 			@if (ViewData.ModelState.ErrorCount > 0)
 			{
-				<div class="form-group">
+				<div class="form-group col-sm-12">
 					<div class="alert alert-danger">
 						@Html.ValidationSummary()
 					</div>
